fix(style): make markdown in props stretch within available width

--- a/src/components/component/component.scss
+++ b/src/components/component/component.scss
@@ -12,14 +12,7 @@
 .docs {
     kompendium-markdown {
         display: block;
-        width: calc(50% - 2rem);
-    }
-}
-
-@media (max-width: $break-point-small) {
-    .docs {
-        kompendium-markdown {
-            width: 100%;
-        }
+        width: 100%;
+        max-width: pxToRem(960);
     }
 }
